cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-microservice
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: estudiantes
